# auctions-api-rustdyn

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml
migrations/: 20240309_1_initial_schema.sql
src/: lib.rs  main.rs
src/api/handlers/: auctions.rs  mod.rs
src/api/models/: auction_model.rs  bid_model.rs  mod.rs
src/domain/commands/: create_auction_command.rs  create_bid_command.rs  mod.rs
src/domain/models/: amount.rs  auction.rs  bid.rs  currency.rs  errors.rs  mod.rs  user.rs
src/domain/services/: mod.rs  system_clock.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/data/: auction_repository.rs  database.rs  migrations.rs  mod.rs
src/infrastructure/services/: create_auction_command_handler.rs  create_bid_command_handler.rs  mod.rs
src/infrastructure/web/: mod.rs  user_context.rs
tests/: auction_tests.rs
