[package]
name = "auctions-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dyn-clone = "1.0.19"
regex = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Web
actix-web = "4.10"
actix-rt = "2.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# Logging and configuration
env_logger = "0.11"
log = "0.4.26"
config = "0.15"
dotenv = "0.15"

[dev-dependencies]
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }